Projects page fixes
Lightgallery fixed. Removed unused grid container for the slideshow
div and centered and set its max-height so that it doesn't overlap
with other contents. Commented-out and removed unused CSS and HTML
code. Loading jquery from CDN. Brought back LightGallery CSS into
head. Moved LightGallery code to projects layout page. Moved all
script loading at the top of the HTML page rather than bottom.

--- a/_sass/scss/base/_base.scss
+++ b/_sass/scss/base/_base.scss
@@ -5,11 +5,11 @@
 
 
 body{
-  font-size: 20px;
+  /* font-size: 20px; */
   line-height: 1.6;
   font-weight: 300;
-  font-family:$font;
-  color:$color-dark-gray;
+  font-family: $font;
+  color: $color-black;
   font-style: normal;
   overflow-x: hidden;
 }
