--- a/_sass/scss/components/_other.scss
+++ b/_sass/scss/components/_other.scss
@@ -79,7 +79,7 @@
 .post-list {
   float:left;
 }
-
+/* Unused
 .projects_grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -93,26 +93,28 @@
     grid-area:project_links;
     background: $color-darker-red;
 
-}
+}*/
+
 .project_pictures {
-    grid-area:project_pictures;
+    height: 350px;
+    //grid-area:project_pictures;
 }
 
 #slideshow {
   position: relative;
   padding: 10px;
-  > div {
+  > .pictures {
     position: absolute;
     top: 10px;
     left: 10px;
     right: 10px;
     bottom: 10px;
-  }
-}
-
-.pictures {
     height:325px;
     display:flex;
     align-items: center;
     justify-content: center;
+    img {
+      max-height: 350px;
+    }
+  }
 }
